vertical social icons added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
  <div class="lightmode"><img src="img/01_header/sun.png" alt="sun" class="mode-swich"></div>
 <div class="nightmode"><img src="img/01_header/moon-2.png" alt="moon" class="mode-swich"></div>
 </header>
+    <div class="vertical-social">
+          <i class="ri-twitter-line"></i>
+          <i class="ri-facebook-circle-fill"></i>
+          <i class="ri-telegram-fill"></i>
+          <i class="ri-youtube-fill"></i>
+          <i class="ri-discord-fill"></i>
+          <i class="fa-brands fa-telegram"></i>
+     </div>
   <div class="hero">
       <div class="hero-left">
         <h1>Discover, and collect<br>
