hero image(cloud) added

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
          </div>
       </div>
       <div class="hero-right">
-     <img src="img/02_hero/imgslider2.png" alt="astronaut">
+     <img src="img/02_hero/imgslider2.png" class="astronaut" alt="astronaut">
+          <img src="img/01_header/cloud.png" class="cloud1" alt="">
+     <img src="img/01_header/cloud.png"  class="cloud2"alt="">
       </div>
   </div>
   <div class="herocard-wrapper">
