login button added

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </div>
 <input type="search" class="search">
 <button class="navbtn"><i class="fa-solid fa-wallet"></i> Wallet Connect</button>
- <div class="lightmode"><img src="img/01_header/sun.png" alt="sun" class="mode-swich"></div>
-<div class="nightmode"><img src="img/01_header/moon-2.png" alt="moon" class="mode-swich"></div>
+ <div class="lightmode"><a href="#"><img src="img/01_header/sun.png" alt="sun" class="mode-swich"></a></div>
+<div class="nightmode"><a href="signIn.html"><i class="fa-solid fa-user login"></i></a></div>
 </header>
     <div class="vertical-social">
           <i class="ri-twitter-line"></i>
